<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gesture_screen_off_title">HTC Screen Off Gestures</string>
    <string name="gesture_edge_sense_title">HTC Squeeze Gestures</string>
    <string name="style_summary"></string>

    <!-- Gestures: Touchscreen gestures -->
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gestures_display_title">Screen off gestures</string>
    <string name="touchscreen_swipe_up_title">Swipe up with one finger</string>
    <string name="touchscreen_double_swipe_down_title">Double Swipe down with one finger</string>
    <string name="touchscreen_swipe_left_title">Swipe left with one finger</string>
    <string name="touchscreen_swipe_right_title">Swipe right with one finger</string>

    <!-- Squeeze Gesture Strings -->
    <string name="squeeze_display_title">Squeeze gestures</string>
    <string name="squeeze_enabled_title">Squeeze gestures</string>
    <string name="squeeze_enabled_summary">Perform various actions using squeeze gestures</string>
    <string name="squeeze_short_title">Short Squeeze gesture</string>
    <string name="squeeze_long_title">Long Squeeze gesture</string>
    <string name="squeeze_gestures_enabled">Squeeze gestures are enabled</string>
    <string name="squeeze_gestures_disabled">Squeeze gestures are disabled</string>
    <string name="squeeze_long_activation_time">Long Squeeze activation time</string>
    <string name="squeeze_force_title">Long Squeeze activation time</string>
    <string name="squeeze_force_summary">Adjust the squeeze force</string>
    <string name="squeeze_advanced_settings_title">Advanced</string>
    <string name="squeeze_haptic_ignore_ringer_title">Haptic feedback ignores ringer mode</string>
    <string name="squeeze_haptic_ignore_ringer_summary">Vibrate even when in Do Not Disturb Mode</string>
    <string name="squeeze_gestures_activated">Vibrate when a squeeze gesture is activated</string>
    <string name="squeeze_gestures_screen_off_activated">Vibrate when a screen off gesture is activated</string>
	
    <!-- Action Strings -->
    <string name="action_dialog_title">Gesture action</string>
    <string name="action_do_nothing">Do nothing</string>
    <string name="action_flashlight">Toggle the flashlight</string>
    <string name="action_camera">Open the camera</string>
    <string name="action_browser">Open the browser</string>
    <string name="action_dialer">Open the dialer</string>
    <string name="action_email">View your emails</string>
    <string name="action_messages">View your messages</string>
    <string name="action_play_pause_music">Play/pause music playback</string>
    <string name="action_previous_track">Navigate to the previous music track</string>
    <string name="action_next_track">Skip to the next music track</string>
    <string name="action_volume_down">Lower media volume</string>
    <string name="action_volume_up">Raise media volume</string>
    <string name="action_take_screenshot">Take a screenshot</string>
    <string name="action_turn_screen_on_off">Turn Screen On/Off</string>
    <string name="action_doze">Trigger Ambient Display</string>

</resources>
